--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "chart.js": "^4.4.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
