--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^2.2.0",
     "chart.js": "^4.4.9",
     "vue": "^3.5.13",
+    "vue-i18n": "^10.0.7",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
